--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "d3": "^5.15.1",
+    "serve-favicon": "2.5.0",
     "express": "^4.14.0",
     "jsdom": "^16.2.2",
     "pug": "^2.0.0"
